force-app/main/default/objects/Chantier__c/fields/distanceMagasinDepot__c.field-meta.xml
<CustomField>
    <fullName>distanceMagasinDepot__c</fullName>
    <formula>IF(OR(ISNULL(sectorisation__r.localisationMagasin__c),
      ISNULL(sectorisation__r.localisationDepot__c)),
   NULL,
   DISTANCE(sectorisation__r.localisationMagasin__c, sectorisation__r.localisationDepot__c, &apos;km&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distance magasin / dépôt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>