force-app/main/default/objects/Chantier__c/fields/emailLocataires__c.field-meta.xml
<CustomField>
    <fullName>emailLocataires__c</fullName>
    <label>Email (Locataires)</label>
    <type>Email</type>
</CustomField>