force-app/main/default/objects/Chantier__c/fields/emailOccupants__c.field-meta.xml
<CustomField>
    <fullName>emailOccupants__c</fullName>
    <label>Email (Occupants)</label>
    <type>Email</type>
</CustomField>