force-app/main/default/objects/Chantier__c/fields/emailProprietaires__c.field-meta.xml
<CustomField>
    <fullName>emailProprietaires__c</fullName>
    <label>Email (Propriétaires)</label>
    <type>Email</type>
</CustomField>