force-app/main/default/objects/Chantier__c/fields/equipementVMC__c.field-meta.xml
<CustomField>
    <fullName>equipementVMC__c</fullName>
    <label>Equipement VMC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Simple flux</fullName>
            </value>
            <value>
                <fullName>Double flux</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>