force-app/main/default/objects/Chantier__c/fields/erreurSynchronisationDQE__c.field-meta.xml
<CustomField>
    <fullName>erreurSynchronisationDQE__c</fullName>
    <label>Erreur synchronisation DQE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>