force-app/main/default/objects/Chantier__c/fields/etage__c.field-meta.xml
<CustomField>
    <fullName>etage__c</fullName>
    <label>Etage</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>