force-app/main/default/objects/Chantier__c/fields/etatPortail__c.field-meta.xml
<CustomField>
    <fullName>etatPortail__c</fullName>
    <label>Etat du portail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>presencePortail__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Neuf</fullName>
            </value>
            <value>
                <fullName>A rénover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>