force-app/main/default/objects/Chantier__c/fields/etatPorteGarage__c.field-meta.xml
<CustomField>
    <fullName>etatPorteGarage__c</fullName>
    <label>Etat de la porte de garage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>presenceGarage__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Neuf</fullName>
            </value>
            <value>
                <fullName>A rénover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>