force-app/main/default/objects/Chantier__c/fields/forcedInsert__c.field-meta.xml
<CustomField>
    <fullName>forcedInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insertion forcée</label>
    <type>Checkbox</type>
</CustomField>