force-app/main/default/objects/Chantier__c/fields/GDPR_nombreEssais__c.field-meta.xml
<CustomField>
    <fullName>GDPR_nombreEssais__c</fullName>
    <description>Nombre d’essais et d’échecs de la suppression</description>
    <label>Nombre d’essais (GDPR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>