force-app/main/default/objects/Chantier__c/fields/heatingMode__c.field-meta.xml
<CustomField>
    <fullName>heatingMode__c</fullName>
    <label>Mode de chauffe principal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>heatingModes</valueSetName>
    </valueSet>
</CustomField>