force-app/main/default/objects/Chantier__c/fields/horsSecteur__c.field-meta.xml
<CustomField>
    <fullName>horsSecteur__c</fullName>
    <formula>IF(UPPER(codeMagasinActuel__c) == &apos;HORS ZONE&apos;, &apos;Hors Zone&apos;,
IF(UPPER(codeMagasinActuel__c) == &apos;ZONE BLANCHE&apos;, &apos;Zone Blanche&apos;,
IF(owner_CodeRegion__c != codeRegionActuel__c, &apos;Région&apos;,
IF(owner_CodeDV__c != codeDVActuel__c, &apos;DV&apos;,
IF(owner_CodeMagasin__c != codeMagasinActuel__c, &apos;Magasin&apos;, &apos;&apos;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hors-secteur</label>
    <type>Text</type>
</CustomField>