force-app/main/default/objects/Chantier__c/fields/identificationSummary__c.field-meta.xml
<CustomField>
    <fullName>identificationSummary__c</fullName>
    <formula>numeroChantier__c + &apos; - &apos; + Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Résumé (Identification)</label>
    <type>Text</type>
</CustomField>