force-app/main/default/objects/Chantier__c/fields/installedAssetCount__c.field-meta.xml
<CustomField>
    <fullName>installedAssetCount__c</fullName>
    <description>Nombre d&apos;actifs installés au chantier</description>
    <inlineHelpText>Nombre d&apos;actifs installés au chantier</inlineHelpText>
    <label>[#] Nombre d&apos;actifs installés</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>