force-app/main/default/objects/Chantier__c/fields/interditProspection__c.field-meta.xml
<CustomField>
    <fullName>interditProspection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interdit prospection</label>
    <type>Checkbox</type>
</CustomField>