force-app/main/default/objects/Chantier__c/fields/interetMarketing__c.field-meta.xml
<CustomField>
    <fullName>interetMarketing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Photographies ou vidéos possibles, ou client extrêmement satisfait de K par K.</inlineHelpText>
    <label>Intérêt marketing</label>
    <type>Checkbox</type>
</CustomField>