force-app/main/default/objects/Chantier__c/fields/interphone__c.field-meta.xml
<CustomField>
    <fullName>interphone__c</fullName>
    <label>Interphone</label>
    <length>80</length>
    <type>Text</type>
</CustomField>