force-app/main/default/objects/Chantier__c/fields/iris__c.field-meta.xml
<CustomField>
    <fullName>iris__c</fullName>
    <label>Iris</label>
    <length>9</length>
    <type>Text</type>
</CustomField>