force-app/main/default/objects/Chantier__c/fields/isolationHabitation__c.field-meta.xml
<CustomField>
    <fullName>isolationHabitation__c</fullName>
    <label>Isolation de l&apos;habitation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>