force-app/main/default/objects/Chantier__c/fields/LastModifiedByCall__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedByCall__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dernière modification par (Call)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LastChantiersModifiedByCall</relationshipName>
    <type>Lookup</type>
</CustomField>