force-app/main/default/objects/Chantier__c/fields/lastModifiedByCall_CallCenter__c.field-meta.xml
<CustomField>
    <fullName>lastModifiedByCall_CallCenter__c</fullName>
    <formula>TEXT(LastModifiedByCall__r.Callcenters__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call-center (Modification)</label>
    <type>Text</type>
</CustomField>