force-app/main/default/objects/Chantier__c/fields/lastModifiedByCall_Equipe__c.field-meta.xml
<CustomField>
    <fullName>lastModifiedByCall_Equipe__c</fullName>
    <formula>TEXT(LastModifiedByCall__r.EquipesCall__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipe (Modification)</label>
    <type>Text</type>
</CustomField>