force-app/main/default/objects/Chantier__c/fields/LastModifiedBySale__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedBySale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dernière modification par (Vente)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LastChantiersModifiedBySale</relationshipName>
    <type>Lookup</type>
</CustomField>