force-app/main/default/objects/Chantier__c/fields/lastModifiedBySale_CodeDV__c.field-meta.xml
<CustomField>
    <fullName>lastModifiedBySale_CodeDV__c</fullName>
    <formula>LastModifiedBySale__r.CodeDV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code de la DV (Modification)</label>
    <type>Text</type>
</CustomField>