force-app/main/default/objects/Chantier__c/fields/lastModifiedBySale_CodeMagasin__c.field-meta.xml
<CustomField>
    <fullName>lastModifiedBySale_CodeMagasin__c</fullName>
    <formula>LastModifiedBySale__r.CodeMagasin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code du magasin (Modification)</label>
    <type>Text</type>
</CustomField>