force-app/main/default/objects/Chantier__c/fields/lastModifiedBySale_CodeRegion__c.field-meta.xml
<CustomField>
    <fullName>lastModifiedBySale_CodeRegion__c</fullName>
    <formula>LastModifiedBySale__r.CodeDR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code de la région (Modification)</label>
    <type>Text</type>
</CustomField>