force-app/main/default/objects/Chantier__c/fields/lastModifiedBySale_LibelleDV__c.field-meta.xml
<CustomField>
    <fullName>lastModifiedBySale_LibelleDV__c</fullName>
    <formula>LastModifiedBySale__r.LibelleDV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DV (Modification)</label>
    <type>Text</type>
</CustomField>