force-app/main/default/objects/Chantier__c/fields/lastModifiedBySale_LibelleMagasin__c.field-meta.xml
<CustomField>
    <fullName>lastModifiedBySale_LibelleMagasin__c</fullName>
    <formula>LastModifiedBySale__r.libelleMagasin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Magasin (Modification)</label>
    <type>Text</type>
</CustomField>