force-app/main/default/objects/Chantier__c/fields/lastModifiedBySale_LibelleRegion__c.field-meta.xml
<CustomField>
    <fullName>lastModifiedBySale_LibelleRegion__c</fullName>
    <formula>LastModifiedBySale__r.LibelleDR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Région (Modification)</label>
    <type>Text</type>
</CustomField>