force-app/main/default/objects/Chantier__c/fields/lastModifiedDateByCall__c.field-meta.xml
<CustomField>
    <fullName>lastModifiedDateByCall__c</fullName>
    <label>Dernière modification le (Call)</label>
    <type>DateTime</type>
</CustomField>