force-app/main/default/objects/Chantier__c/fields/lastModifiedDateBySale__c.field-meta.xml
<CustomField>
    <fullName>lastModifiedDateBySale__c</fullName>
    <label>Dernière modification le (Vente)</label>
    <type>DateTime</type>
</CustomField>