force-app/main/default/objects/Chantier__c/fields/libelleDepotActuel__c.field-meta.xml
<CustomField>
    <fullName>libelleDepotActuel__c</fullName>
    <formula>IF(ISNULL(sectorisation__c), &apos;&apos;, sectorisation__r.libelleDepot__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dépôt (Sect. K par K)</label>
    <type>Text</type>
</CustomField>