force-app/main/default/objects/Chantier__c/fields/libelleDepotInitial__c.field-meta.xml
<CustomField>
    <fullName>libelleDepotInitial__c</fullName>
    <label>Dépôt (Sect. Init.)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>