force-app/main/default/objects/Chantier__c/fields/libelleDepotReference__c.field-meta.xml
<CustomField>
    <fullName>libelleDepotReference__c</fullName>
    <label>Dépôt (Sect. Réf.)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>