force-app/main/default/objects/Chantier__c/fields/libelleDSActuel__c.field-meta.xml
<CustomField>
    <fullName>libelleDSActuel__c</fullName>
    <formula>IF(ISNULL(sectorisation__c), &apos;&apos;, sectorisation__r.libelleDS__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DS (Sect. K par K)</label>
    <type>Text</type>
</CustomField>