force-app/main/default/objects/Chantier__c/fields/libelleDSInitial__c.field-meta.xml
<CustomField>
    <fullName>libelleDSInitial__c</fullName>
    <label>DS (Sect. Init.)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>