force-app/main/default/objects/Chantier__c/fields/libelleDSReference__c.field-meta.xml
<CustomField>
    <fullName>libelleDSReference__c</fullName>
    <label>DS (Sect. Réf.)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>