force-app/main/default/objects/Chantier__c/fields/libelleDVActuel__c.field-meta.xml
<CustomField>
    <fullName>libelleDVActuel__c</fullName>
    <formula>IF(ISNULL(sectorisation__c), &apos;&apos;, sectorisation__r.libelleDV__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DV (Sect. K par K)</label>
    <type>Text</type>
</CustomField>