force-app/main/default/objects/Chantier__c/fields/libelleDVInitial__c.field-meta.xml
<CustomField>
    <fullName>libelleDVInitial__c</fullName>
    <label>DV (Sect. Init.)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>