force-app/main/default/objects/Chantier__c/fields/libelleDVReference__c.field-meta.xml
<CustomField>
    <fullName>libelleDVReference__c</fullName>
    <label>DV (Sect. Réf.)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>