force-app/main/default/objects/Chantier__c/fields/libelleMagasinActuel__c.field-meta.xml
<CustomField>
    <fullName>libelleMagasinActuel__c</fullName>
    <formula>IF(ISNULL(sectorisation__c), &apos;&apos;, sectorisation__r.libelleMagasin__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Magasin (Sect. K par K)</label>
    <type>Text</type>
</CustomField>