force-app/main/default/objects/Chantier__c/fields/libelleMagasinInitial__c.field-meta.xml
<CustomField>
    <fullName>libelleMagasinInitial__c</fullName>
    <label>Magasin (Sect. Init.)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>