force-app/main/default/objects/Chantier__c/fields/libelleMagasinReference__c.field-meta.xml
<CustomField>
    <fullName>libelleMagasinReference__c</fullName>
    <label>Magasin (Sect. Réf.)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>