force-app/main/default/objects/Chantier__c/fields/libelleRegionActuel__c.field-meta.xml
<CustomField>
    <fullName>libelleRegionActuel__c</fullName>
    <formula>IF(ISNULL(sectorisation__c), &apos;&apos;, sectorisation__r.libelleRegion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Région (Sect. K par K)</label>
    <type>Text</type>
</CustomField>