force-app/main/default/objects/Chantier__c/fields/libelleRegionInitial__c.field-meta.xml
<CustomField>
    <fullName>libelleRegionInitial__c</fullName>
    <label>Région (Sect. Init.)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>