force-app/main/default/objects/Chantier__c/fields/libelleRegionReference__c.field-meta.xml
<CustomField>
    <fullName>libelleRegionReference__c</fullName>
    <label>Région (Sect. Réf.)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>