force-app/main/default/objects/Chantier__c/fields/Localisation__c.field-meta.xml
<CustomField>
    <fullName>Localisation__c</fullName>
    <label>Localisation</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>