force-app/main/default/objects/Chantier__c/fields/locataire__c.field-meta.xml
<CustomField>
    <fullName>locataire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Si différent du propriétaire</inlineHelpText>
    <label>Locataire</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Chantiers (Locataire)</relationshipLabel>
    <relationshipName>locataireChantiers</relationshipName>
    <type>Lookup</type>
</CustomField>