force-app/main/default/objects/Chantier__c/fields/locatairePrecedent__c.field-meta.xml
<CustomField>
    <fullName>locatairePrecedent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Locataire précédent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Chantiers (Locataire précédent)</relationshipLabel>
    <relationshipName>locatairePrecedentChantiers</relationshipName>
    <type>Lookup</type>
</CustomField>