force-app/main/default/objects/Chantier__c/fields/methodeGeocodage__c.field-meta.xml
<CustomField>
    <fullName>methodeGeocodage__c</fullName>
    <label>Méthode de géocodage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Automatique</fullName>
            </value>
            <value>
                <fullName>Batch</fullName>
            </value>
            <value>
                <fullName>Manuel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>