force-app/main/default/objects/Chantier__c/fields/montantDepensesChauffage__c.field-meta.xml
<CustomField>
    <fullName>montantDepensesChauffage__c</fullName>
    <label>Montant des dépenses de chauffage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>