force-app/main/default/objects/Chantier__c/fields/nbAffectationsCall__c.field-meta.xml
<CustomField>
    <fullName>nbAffectationsCall__c</fullName>
    <label>Nombre d&apos;affectations call</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>