force-app/main/default/objects/Chantier__c/fields/nbAffectationsVendeur__c.field-meta.xml
<CustomField>
    <fullName>nbAffectationsVendeur__c</fullName>
    <label>Nombre d&apos;affectations vendeur</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>