force-app/main/default/objects/Chantier__c/fields/nbAppelsSortants__c.field-meta.xml
<CustomField>
    <fullName>nbAppelsSortants__c</fullName>
    <inlineHelpText>Indicateur cumulé (non agrégé)</inlineHelpText>
    <label>Nombre d&apos;appels sortants (Call)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>