force-app/main/default/objects/Chantier__c/fields/nbAppelsSortantsKparK__c.field-meta.xml
<CustomField>
    <fullName>nbAppelsSortantsKparK__c</fullName>
    <formula>NULLVALUE(nbAppelsSortants__c, 0) + NULLVALUE(nbPhonings__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicateur cumulé (non agrégé)</inlineHelpText>
    <label>Nombre d&apos;appels sortants (K par K)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>