force-app/main/default/objects/Chantier__c/fields/nbContratsResilies__c.field-meta.xml
<CustomField>
    <fullName>nbContratsResilies__c</fullName>
    <label>Nombre de contrats résiliés</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>