force-app/main/default/objects/Chantier__c/fields/nbContratsVendus__c.field-meta.xml
<CustomField>
    <fullName>nbContratsVendus__c</fullName>
    <label>Nombre de contrats vendus</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>