force-app/main/default/objects/Chantier__c/fields/nbDevisAConfigurer__c.field-meta.xml
<CustomField>
    <fullName>nbDevisAConfigurer__c</fullName>
    <label>Nombre de devis à configurer</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>