force-app/main/default/objects/Chantier__c/fields/nbDevisErrones__c.field-meta.xml
<CustomField>
    <fullName>nbDevisErrones__c</fullName>
    <label>Nombre de devis erronés</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>