force-app/main/default/objects/Chantier__c/fields/nbDevisExpires__c.field-meta.xml
<CustomField>
    <fullName>nbDevisExpires__c</fullName>
    <label>Nombre de devis expirés</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>