force-app/main/default/objects/Chantier__c/fields/nbDevisNonTransmis__c.field-meta.xml
<CustomField>
    <fullName>nbDevisNonTransmis__c</fullName>
    <label>Nombre de devis non transmis</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>