force-app/main/default/objects/Chantier__c/fields/nbDevisResilies__c.field-meta.xml
<CustomField>
    <fullName>nbDevisResilies__c</fullName>
    <label>Nombre de devis résilés</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>