force-app/main/default/objects/Chantier__c/fields/nbDevisTransmis__c.field-meta.xml
<CustomField>
    <fullName>nbDevisTransmis__c</fullName>
    <label>Nombre de devis transmis</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>