force-app/main/default/objects/Chantier__c/fields/nbDevisVendusEnAttente__c.field-meta.xml
<CustomField>
    <fullName>nbDevisVendusEnAttente__c</fullName>
    <label>Nombre de devis vendus en attente</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>