force-app/main/default/objects/Chantier__c/fields/nbDevisVendusEnregistres__c.field-meta.xml
<CustomField>
    <fullName>nbDevisVendusEnregistres__c</fullName>
    <label>Nombre de devis vendus enregistrés</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>