force-app/main/default/objects/Chantier__c/fields/nbDevisVendusIncontournables__c.field-meta.xml
<CustomField>
    <fullName>nbDevisVendusIncontournables__c</fullName>
    <label>Nombre de devis vendus incontournables</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>