force-app/main/default/objects/Chantier__c/fields/nbEmails__c.field-meta.xml
<CustomField>
    <fullName>nbEmails__c</fullName>
    <inlineHelpText>Indicateur cumulé (non agrégé)</inlineHelpText>
    <label>Nombre d&apos;emails (Call)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>