force-app/main/default/objects/Chantier__c/fields/nbIECEnCours__c.field-meta.xml
<CustomField>
    <fullName>nbIECEnCours__c</fullName>
    <label>Nombre d&apos;IEC en cours</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>