force-app/main/default/objects/Chantier__c/fields/nbIECTermines__c.field-meta.xml
<CustomField>
    <fullName>nbIECTermines__c</fullName>
    <label>Nombre d&apos;IEC terminés</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>