force-app/main/default/objects/Chantier__c/fields/nbIncontournablesEnCours__c.field-meta.xml
<CustomField>
    <fullName>nbIncontournablesEnCours__c</fullName>
    <label>Nombre d&apos;incontournables en cours</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>