force-app/main/default/objects/Chantier__c/fields/nbIncontournablesEnregistres__c.field-meta.xml
<CustomField>
    <fullName>nbIncontournablesEnregistres__c</fullName>
    <label>Nombre d&apos;incontournables enregistrés</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>