force-app/main/default/objects/Chantier__c/fields/nbIncontournablesTermines__c.field-meta.xml
<CustomField>
    <fullName>nbIncontournablesTermines__c</fullName>
    <label>Nombre d&apos;incontournables terminés</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>