force-app/main/default/objects/Chantier__c/fields/nbModifications__c.field-meta.xml
<CustomField>
    <fullName>nbModifications__c</fullName>
    <label>Nombre total de modifications</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>