force-app/main/default/objects/Chantier__c/fields/nbModificationsByCall__c.field-meta.xml
<CustomField>
    <fullName>nbModificationsByCall__c</fullName>
    <label>Nombre de modifications (Call)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>