force-app/main/default/objects/Chantier__c/fields/nbModificationsBySale__c.field-meta.xml
<CustomField>
    <fullName>nbModificationsBySale__c</fullName>
    <label>Nombre de modifications (Vente)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>