force-app/main/default/objects/Chantier__c/fields/nbPhonings__c.field-meta.xml
<CustomField>
    <fullName>nbPhonings__c</fullName>
    <inlineHelpText>Indicateur cumulé (non agrégé)</inlineHelpText>
    <label>Nombre de phonings (Vente)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>