force-app/main/default/objects/Chantier__c/fields/nbPortesEtFenetres__c.field-meta.xml
<CustomField>
    <fullName>nbPortesEtFenetres__c</fullName>
    <label>Nombre de portes et fenêtres présentes</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>