force-app/main/default/objects/Chantier__c/fields/nbProjetsAnalyse__c.field-meta.xml
<CustomField>
    <fullName>nbProjetsAnalyse__c</fullName>
    <label>Nombre de projets (Analyse)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>