force-app/main/default/objects/Chantier__c/fields/nbProjetsDevis__c.field-meta.xml
<CustomField>
    <fullName>nbProjetsDevis__c</fullName>
    <label>Nombre de projets (Devis)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>