force-app/main/default/objects/Chantier__c/fields/nbProjetsDevisEnvoye__c.field-meta.xml
<CustomField>
    <fullName>nbProjetsDevisEnvoye__c</fullName>
    <label>Nombre de projets (Devis envoyé)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>