force-app/main/default/objects/Chantier__c/fields/nbProjetsEnAttente__c.field-meta.xml
<CustomField>
    <fullName>nbProjetsEnAttente__c</fullName>
    <label>Nombre de projets (En attente)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>