force-app/main/default/objects/Chantier__c/fields/nbProjetsNegociation__c.field-meta.xml
<CustomField>
    <fullName>nbProjetsNegociation__c</fullName>
    <label>Nombre de projets (Négociation)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>