force-app/main/default/objects/Chantier__c/fields/nbProjetsRDV__c.field-meta.xml
<CustomField>
    <fullName>nbProjetsRDV__c</fullName>
    <label>Nombre de projets (RDV)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>