force-app/main/default/objects/Chantier__c/fields/nbProjetsRefus__c.field-meta.xml
<CustomField>
    <fullName>nbProjetsRefus__c</fullName>
    <label>Nombre de projets (Refus)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>