force-app/main/default/objects/Chantier__c/fields/nbProjetsReporte__c.field-meta.xml
<CustomField>
    <fullName>nbProjetsReporte__c</fullName>
    <label>Nombre de projets (Reporté)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>