force-app/main/default/objects/Chantier__c/fields/nbProjetsVendu__c.field-meta.xml
<CustomField>
    <fullName>nbProjetsVendu__c</fullName>
    <label>Nombre de projets (Vendu)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>