force-app/main/default/objects/Chantier__c/fields/nbR1NonEffectuesAvecDep__c.field-meta.xml
<CustomField>
    <fullName>nbR1NonEffectuesAvecDep__c</fullName>
    <label>Nombre de R1 non effectués (avec dép.)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>