force-app/main/default/objects/Chantier__c/fields/nbR1Pris__c.field-meta.xml
<CustomField>
    <fullName>nbR1Pris__c</fullName>
    <label>Nombre de R1 pris</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>