force-app/main/default/objects/Chantier__c/fields/nbR2Effectues__c.field-meta.xml
<CustomField>
    <fullName>nbR2Effectues__c</fullName>
    <label>Nombre de R2 effectués</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>