force-app/main/default/objects/Chantier__c/fields/nbR2NonEffectuesAvecDep__c.field-meta.xml
<CustomField>
    <fullName>nbR2NonEffectuesAvecDep__c</fullName>
    <label>Nombre de R2 non effectués (avec dép.)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>